# scimodom

./: .gitignore  CHANGELOG.md  Jenkinsfile  MANIFEST.in  README.md  TODO.org  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug.yaml  feature.yaml  task.yaml
.github/workflows/: static.yml
client/: .env  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.app.json  vite.config.js  vite.config.ts  vitest.config.ts
client/public/: config.js  data.json
client/src/: App.vue  backup_main.js  main.js  main.ts
docker/: CONTAINER_SETUP.md  docker-compose-db-only.yml  docker-compose.yml  env_docker_example  env_example
docker/app_container/: Dockerfile  build.sh
docker/db_container/: Dockerfile  build.sh
docker/scripts/: __create_local_folders.py  create_local_folders.py  create_local_folders.sh  post_restore.sh  pre_backup.sh
docs/: database.html  objects.inv  search.html  searchindex.js
docs/_sources/: bedrmod.rst.txt
scimodom/client/: index.html  package-lock.json  package.json  tailwind.config.js
scimodom/server/: README.md  environment.yml
server/: .flaskenv  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  alembic.ini  env_example  environment.yml  pyproject.toml
server/docs/: .buildinfo  bedrmod.html  genindex.html  index.html
server/docs/_sources/: database.rst.txt  index.rst.txt
server/docs/_static/: documentation_options.js
server/docs/source/: bedrmod.rst  conf.py  containers.rst  database.rst  flask.rst  index.rst  installation.rst  scimodom.rst
server/import/: .gitignore
server/migrations/: env.py
server/migrations/dumps/: scimodom_v.1.sql
server/migrations/versions/: 04540395cc99_add_rna_table.py  1c61e979733b_euf_v1_7.py  1e684fab4e13_add_user_table.py  2030d7195a9b_upd_project.py  220c23fda34a_check_constraints_id_version.py  2702dc292599_add_annotation.py  316b46c4f535_fix_coverage_constraint.py  316b46c4f535_fix_covergae_constrain.py  342a8db1888e_init.py  46cf79e27b16_scimodom_v_1.py  4926c6c57299_change_strand_into_enum.py  4cf76bf1e874_simplify_annotation.py  5800126056c3_add_project_source.py  5c61624059dc_init.py  622810482837_init.py  665ece797465_scimodom_schema_v2.py  6c36535cd791_init.py  6e255bc2f48f_add_rna_constraints.py  71054e891d6e_setup.py  762478c698f6_add_dataset_stamp.py  79fa0c30513f_drop_annotation.py  80658585dbb2_add_trna.py  a2107e9c03fc_dataset_id_str.py  abbad4ef0a9c_fix_minor_v1.py  ac1b984c4751_add_bam_file_and_user_project_.py  b60acf426325_upd_genomic_annotation.py  be4f58630610_assembly_drop_constraint.py  be9340f7ff6e_scimodom_schema_v3.py  c61c3a61a4b4_add_modomics_database_id.py  ea1cabad52e4_init.py  fe1b36ea3437_init.py
server/src/scimodom/: __init__.py  app.py  app_singleton.py  config.py  frontend.py
server/src/scimodom/api/: __init__.py  access.py  authorisation.py  bam_file.py  dataset.py  helpers.py  management.py  models.py  modification.py  project.py  public.py  queries.py  secure.py  transfer.py  upload.py  user.py  utilities.py
server/src/scimodom/cli/: annotation.py  assembly.py  charts.py  dataset.py  project.py  selection.py  sunburst.py  utilities.py
server/src/scimodom/database/: buffer.py  database.py  models.py  queries.py
server/src/scimodom/database/maintenance/: add_all.py  add_dataset.py  add_project.py  upsert.py
server/src/scimodom/plugins/: cli.py
server/src/scimodom/services/: __init__.py  annotation.py  assembly.py  bedtools.py  comparison.py  cross_map.py  data.py  dataset.py  exporter.py  external.py  file.py  gene.py  importer.py  mail.py  modification.py  permission.py  project.py  public.py  selection.py  setup.py  sunburst.py  url.py  user.py  utilities.py  validator.py  web.py
server/src/scimodom/services/annotation/: __init__.py  ensembl.py  generic.py  gtrnadb.py
server/src/scimodom/services/importer/: __init__.py  base.py  data.py  generic.py  header.py  importer.py  test.bed
server/src/scimodom/utils/: bed_importer.py  bedtools_dto.py  common_dto.py  models.py  operations.py  project_dto.py  specifications.py  text_file_reader.py  url_routes.py  utils.py
server/src/scimodom/utils/dtos/: bedtools.py  project.py
server/src/scimodom/utils/importer/: bed_importer.py  text_file_reader.py
server/src/scimodom/utils/specs/: enums.py  euf.py
server/tests/: .env.tests.0  .env.tests.1  conftest.py
server/tests/cli/: test_assembly_cli.py  test_charts_cli.py  test_dataset_cli.py  test_project_cli.py
server/tests/fixtures/: annotation.py  bam_file.py  dataset.py  file_service_mock.py  project.py  selection.py  setup.py
server/tests/integration/cli/: test_assembly_cli.py  test_dataset_cli.py  test_project_cli.py
server/tests/integration/data/: file1.bedrmod  file2.bedrmod  metadata.csv
server/tests/integration/services/: test_file_service.py  test_import_data.py
server/tests/mocks/: enums.py  io.py  web.py  web_service.py
server/tests/regression/data/: CDS.bed  exon.bed  five_prime_utr.bed  intergenic.bed  intron.bed  test.fa.gz.fai  three_prime_utr.bed
server/tests/regression/services/: test_bed_features.py  test_bedtools_ensembl_annotation.py  test_comparison.py  test_index_dna_sequence_files.py
server/tests/unit/: conftest.py  test_config.py
server/tests/unit/api/: test_dataset.py  test_dataset_api.py  test_helpers.py  test_modification_api.py  test_transfer.py
server/tests/unit/operations/: test_operations.py
server/tests/unit/services/: test_annotation.py  test_assembly.py  test_bedtools.py  test_comparison.py  test_data.py  test_data_importer.py  test_dataset.py  test_ensembl_annotation.py  test_exporter.py  test_gene.py  test_header_importer.py  test_importer.py  test_mail.py  test_modification.py  test_permission.py  test_project.py  test_selection.py  test_setup.py  test_sunburst.py  test_url.py  test_user.py  test_utilities.py  test_validator.py
server/tests/unit/utils/: test_bed_importer.py  test_bedtools_dto.py  test_enums.py  test_euf_specs.py  test_project_dto.py
webdorina/: app.py  config.py  workers.py
(+351 files in other folders)
