[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scimodom"
description = "Sci-ModoM: The database of transcriptome-wide high-throughput RNA modification sites. Backend."
readme = "README.md"
license = { text = "GNU AGPL" }
authors = [{ name = "Etienne Boileau" }]
maintainers = [
  { name = "Etienne Boileau", email = "boileau@uni-heidelberg.de" }
]
keywords = [
  "RNA modification",
]
# See https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers = [
  "Development Status :: 1 - Planning",
  "Framework :: Flask",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3 :: Only",
]
dynamic = ["version"]
requires-python = ">=3.10,<3.13"
dependencies = [
  "alembic",
  "CrossMap",
  "Flask",
  "Flask-Cors",
  "Flask-JWT-Extended",
  "mysqlclient",
  "numpy<2",
  "pandas",
  "pybedtools",
  "python-dotenv",
  "requests",
  "shortuuid",
  "SQLAlchemy",
  "pydantic[email]"
]

# [project.scripts]

[project.urls]
Github = "https://github.com/dieterich-lab/scimodom"
Issues = "https://github.com/dieterich-lab/scimodom/issues"
Discussions = "https://github.com/dieterich-lab/scimodom/discussions"
Documentation = "https://dieterich-lab.github.io/scimodom"

[project.optional-dependencies]
dev = ["pre-commit", "SQLAlchemy[mypy]", "types-Flask-Cors", "types-requests"]
tests = ["pytest", "pytest-cov", "pytest-depends", "pytest-mock", "pytest-freezer", "pytest-datafiles"]
docs = [
  "ipykernel",
  "matplotlib",
  "nbsphinx",
  "pandoc",
  "sphinx",
  "sphinx_rtd_theme",
  "furo",
  "sphinx-argparse",
  "sphinx-copybutton"
]

[tool.setuptools.dynamic]
version = { attr = "scimodom.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"scimodom" = ["py.typed"]

[tool.mypy]
plugins = [
  "sqlalchemy.ext.mypy.plugin",
  "pydantic.mypy"
]
show_error_codes = "True"
# follow_imports = "silent"
# warn_redundant_casts = true
# warn_unused_ignores = true
# disallow_any_generics = true
# check_untyped_defs = true
# no_implicit_reexport = true
#strict = "True"

# [tool.pydantic-mypy]
# init_forbid_extra = true
# init_typed = true
# warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
log_cli = true
log_cli_level = "INFO"
addopts = "--basetemp /tmp/pytest-of-scimodom --ignore=tests/integration/cli/test_assembly_cli.py"
